--- a/LN7.WebUI/wwwroot/css/signup.css
+++ b/LN7.WebUI/wwwroot/css/signup.css
@@ -21,6 +21,7 @@
 @media (min-width: 1400px) {
 }
 
+/*Page Styles*/
 
 html {
     position: relative;
@@ -43,16 +44,14 @@ body {
     padding: 0;
 }
 
-.containerAll {
-    max-width: 70%;
-}
-
 .wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
+
+/*Logo image Styles*/
 
 .logo-image-signup {
     margin: auto;
@@ -62,22 +61,9 @@ body {
     cursor: pointer;
 }
 
-.form.form-signup {
-    width: 100%;
-}
+/*button Styles*/
 
-.signup-text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: variex, sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    padding-top: 1rem;
-    padding-bottom: 0.5rem;
-}
-
-.btnLogin {
+.btnSignup {
     position: relative;
     display: inline-block;
     background-color: #3f9eff;
@@ -94,18 +80,39 @@ body {
     text-transform: uppercase;
     font-weight: bold;
     font-style: normal;
-    margin-bottom: 2%;
+    margin-bottom: 1.5rem;
 }
 
-    .btnLogin:hover {
-        color: #eee;
-        background-color: #3170af;
-    }
+.btnSignup:hover {
+    color: #eee;
+    background-color: #3170af;
+}
+
+
+/*Form Styles*/
+
+.form.form-signup {
+    width: 100%;
+}
+
+.signup-text {
+    color: rgba(255, 255, 255, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font: inherit;
+    font-size: 2rem;
+    font-weight: 300;
+    font-style: normal;
+    letter-spacing: .15rem;
+    padding-top: 1rem;
+    padding-bottom: 0.5rem;
+}
 
 .form-container {
     margin-top: 2%;
     margin-bottom: 10%;
-    width: 90%;
+    width: 50%;
     height: auto;
     background-color: rgba(138,196,255,0.35);
     border-radius: 5px;
@@ -113,11 +120,6 @@ body {
     display: flex;
     flex-direction: column;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-}
-
-.login-item {
-    margin-top: 20px;
-    margin-bottom: 10px;
 }
 
 .signup-item {
@@ -131,10 +133,6 @@ body {
 .form-signup-item {
     margin-bottom: 20px;
     text-align: center;
-}
-
-.signupBtn-signup {
-    margin-bottom: 1.5rem;
 }
 
 .form-field {
@@ -185,35 +183,15 @@ input {
     color: rgba(255, 255, 255, 0.8);
 }
 
-.form input[type="password"], .form input[type="text"] {
-    width: 70%;
-}
-
 .form.form-signup input[type="password"], .form.form-signup input[type="text"] {
     width: 70%;
 }
 
-.form-login label {
-    background-color: #222222;
-    border-bottom-right-radius: 0;
-    border-top-right-radius: 0;
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-}
-
 .form-signup label {
     background-color: #222222;
-    border-bottom-right-radius: 0;
-    border-top-right-radius: 0;
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-    float: left;
-}
-
-.form-login input[type="text"], .form-login input[type="password"] {
-    background-color: #ffffff;
-    border-bottom-left-radius: 0;
-    border-top-left-radius: 0;
+    color: #3A3F44;
+    border-radius: 0.2rem;
+    padding: 0.5rem 1.25rem;
 }
 
 .form-signup input[type="text"], .form-login input[type="password"] {
@@ -228,12 +206,6 @@ input {
     display: -ms-flexbox;
     display: flex;
 }
-
-    .form-field.buttons {
-        justify-content: space-around;
-        align-items: center;
-        margin-bottom: 20px;
-    }
 
 .text-danger {
     font-size: small;
