--- a/LN7.WebUI/wwwroot/css/site.css
+++ b/LN7.WebUI/wwwroot/css/site.css
@@ -24,4 +24,5 @@ body {
 .navbar {
     background: linear-gradient(to top, #CE8AFF, #9A96FF, #8AC4FF);
     padding-left: 1rem;
+    padding-right: 1rem;
 }
